Resolvendo bug carrinho nao abrindo

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <span>Lanches</span>
                     </a>
                     <a href="#" class="item-carrossel">
-                        <img src="assets/pasteis.png" alt="Combos">
+                        <img src="assets/pasteisdoces.png" alt="Combos">
                         <span>Pastéis</span>
                     </a>
                     <a href="#" class="item-carrossel">
