Responsivo com sucesso

--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
                 <span class="barra"></span>
                 <span class="barra"></span>
             </div>
-            <nav class="menu-navegacao">
-<ul class="nav-links">
-  <li><a href="#" class="ativo">Opções</a></li>
-  <li><a href="#">Pedidos</a></li>
-  <li><a href="#">Promoções</a></li>
-</ul>
+      <nav class="menu-navegacao">
+        <ul class="nav-links">
+          <li><a href="#" class="ativo">Opções</a></li>
+          <li><a href="#">Pedidos</a></li>
+          <li><a href="#">Promoções</a></li>
+          <li class="apenas-mobile"><a href="login.html">Conta</a></li>
+        </ul>
+      </nav>
             </nav>
             <div class="acoes-navegacao">
                 <div class="caixa-pesquisa">
